Fixed alignment on menu page

--- a/client/src/pages/menu/Menu.css
+++ b/client/src/pages/menu/Menu.css
@@ -63,15 +63,18 @@
   max-width: 200px;
   max-height: 200px;
   align-self: center;
+  margin: 5px 0;
 }
 
 .item-title {
   color: white;
+  text-align: center;
 }
 
 .item-action {
   margin-top: 20px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .add-to-cart {
